--- a/.xonotic/data/server.cfg
+++ b/.xonotic/data/server.cfg
@@ -10,7 +10,8 @@ gametype dm
 fraglimit 32
 g_maxplayers 16
 sv_vote_gametype 1
-sv_weaponstats_file "http://www.xonotic.org/weaponbalance/"
+sv_vote_gametype_options "dm ctf ca lms tdm ft kh"
+#sv_weaponstats_file "http://www.xonotic.org/weaponbalance/"
 
 exec "secret.cfg" // contains just rcon_password
 sv_motd "Visit http://xonotic.us.to/ for full server config with pk3 files." 
